Preliminary comments endpoints done
